--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "enbuymall前端代码",
   "main": "index.js",
   "scripts": {
-    "dev_linux": "WEBPACK_ENV=dev webpack-dev-server --inline --port 8088",
-    "dev": "set WEBPACK_ENV=dev && webpack-dev-server --inline --port 8088",
-    "dist_linux": "WEBPACK_ENV=online webpack -p",
-    "dist": "set WEBPACK_ENV=online && webpack -p"
+    "dev": "WEBPACK_ENV=dev webpack-dev-server --inline --port 8088",
+    "dev_win": "set WEBPACK_ENV=1 && webpack-dev-server --inline --port 8088",
+    "dist": "WEBPACK_ENV=online webpack -p",
+    "dist_win": "set WEBPACK_ENV=online && webpack -p"
   },
   "repository": {
     "type": "git",
